improve code and adjust to atom.io (platfromIO)

--- a/code/arduino/platformio.ini
+++ b/code/arduino/platformio.ini
@@ -22,3 +22,8 @@ platform = espressif
 framework = arduino
 board = esp12e
 targets = upload
+
+[env:d1_mini]
+platform = espressif
+framework = arduino
+board = d1_mini
