remove old platform type

--- a/code/arduino/platformio.ini
+++ b/code/arduino/platformio.ini
@@ -17,13 +17,9 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:esp12e]
-platform = espressif
-framework = arduino
-board = esp12e
-targets = upload
-
 [env:d1_mini]
 platform = espressif
 framework = arduino
 board = d1_mini
+targets = upload
+upload_speed = 57600
